[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/src/theme/gdquest.theme" type="Theme" id=1]
[ext_resource path="res://scenes_new/menu_screens/_util_scenes/NinePatchRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes_new/menu_screens/_util_scenes/NinePatchRectTop.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes_new/menu_screens/_util_scenes/resolution_options_ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes_new/menu_screens/_util_scenes/cursor_options_ui.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts_new/languge_option.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/hex_min_ui.png" type="Texture" id=7]
[ext_resource path="res://scripts_new/SpinBox_ui.gd" type="Script" id=8]
[ext_resource path="res://scenes_new/menu_screens/settings/settings_screen.gd" type="Script" id=9]
[ext_resource path="res://addons/SettingsManager/ui_scripts/universal_settings_node.gd" type="Script" id=10]
[ext_resource path="res://Assets/UI/button_normal.tres" type="StyleBox" id=11]
[ext_resource path="res://Assets/UI/button_hover.tres" type="StyleBox" id=12]

[node name="Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="MarginContainer" parent="CenterContainer" groups=[
"ui_menu",
]]
margin_left = 267.0
margin_top = 126.0
margin_right = 753.0
margin_bottom = 573.0
focus_mode = 2
theme = ExtResource( 1 )
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" parent="CenterContainer/TabContainer" instance=ExtResource( 2 )]
self_modulate = Color( 0.290196, 0.290196, 0.290196, 0.901961 )
margin_top = 0.0
margin_right = 486.0
margin_bottom = 447.0

[node name="NinePatchRect2" parent="CenterContainer/TabContainer" instance=ExtResource( 3 )]
self_modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_right = 486.0

[node name="Настройки" type="MarginContainer" parent="CenterContainer/TabContainer"]
margin_right = 486.0
margin_bottom = 447.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="GridContainer" parent="CenterContainer/TabContainer/Настройки"]
margin_left = 5.0
margin_top = 10.0
margin_right = 476.0
margin_bottom = 437.0
custom_constants/vseparation = 6

[node name="Label" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer"]
margin_right = 471.0
margin_bottom = 21.0
text = "ui_settings"

[node name="HSplitContainer" type="HSplitContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer"]
margin_top = 27.0
margin_right = 471.0
margin_bottom = 373.0
size_flags_horizontal = 3
custom_constants/separation = 6
dragger_visibility = 1

[node name="GameSettings" type="MarginContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer"]
margin_right = 242.0
margin_bottom = 346.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="NinePatchRect" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings" instance=ExtResource( 2 )]
self_modulate = Color( 0.219608, 0.219608, 0.219608, 1 )
margin_top = 0.0
margin_right = 242.0
margin_bottom = 346.0

[node name="NinePatchRect2" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings" instance=ExtResource( 3 )]
margin_right = 242.0

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings"]
margin_right = 242.0
margin_bottom = 346.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 232.0
margin_bottom = 336.0
rect_clip_content = true
custom_constants/separation = 9

[node name="Label" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer"]
margin_right = 222.0
margin_bottom = 21.0
mouse_filter = 1
text = "ui_game"

[node name="Язык" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer"]
margin_top = 30.0
margin_right = 222.0
margin_bottom = 51.0
mouse_filter = 1
text = "ui_language"

[node name="OptionButton3" type="OptionButton" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer"]
margin_top = 60.0
margin_right = 222.0
margin_bottom = 81.0
flat = true
expand_icon = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
setting = "local"

[node name="Game speed" type="HBoxContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer"]
margin_top = 90.0
margin_right = 222.0
margin_bottom = 121.0
size_flags_stretch_ratio = 8.32
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer/Game speed"]
margin_top = 5.0
margin_right = 128.0
margin_bottom = 26.0
mouse_filter = 1
size_flags_horizontal = 3
text = "ui_game_speed"

[node name="SpinBox" type="SpinBox" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer/Game speed"]
margin_left = 148.0
margin_right = 222.0
margin_bottom = 31.0
min_value = 1.0
max_value = 6.0
value = 1.0
rounded = true
align = 1
suffix = "x"
script = ExtResource( 8 )
setting = "game_speed"

[node name="Cursor" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer"]
margin_top = 130.0
margin_right = 222.0
margin_bottom = 151.0
mouse_filter = 1
text = "ui_cursor"

[node name="OptionButton2" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 160.0
margin_right = 222.0
margin_bottom = 210.0
setting = "cursor"

[node name="CursorSize" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer"]
margin_top = 219.0
margin_right = 222.0
margin_bottom = 240.0
mouse_filter = 1
text = "ui_cursor_size"

[node name="HSlider" type="HSlider" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer"]
margin_top = 249.0
margin_right = 222.0
margin_bottom = 266.0
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
min_value = 0.1
max_value = 2.0
step = 0.1
value = 0.4
script = ExtResource( 10 )
setting = "cursor_size"

[node name="Курсор2" type="HBoxContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer"]
margin_top = 275.0
margin_right = 222.0
margin_bottom = 296.0
size_flags_stretch_ratio = 8.32
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer/Курсор2"]
margin_right = 186.0
margin_bottom = 21.0
mouse_filter = 1
size_flags_horizontal = 3
text = "ui_system_cursor"

[node name="CheckBox" type="CheckBox" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer/Курсор2"]
margin_left = 206.0
margin_right = 222.0
margin_bottom = 21.0
mouse_filter = 1
script = ExtResource( 10 )
setting = "use_os_cursor"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer"]
margin_top = 305.0
margin_right = 222.0
margin_bottom = 326.0
size_flags_stretch_ratio = 8.32

[node name="Label" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_right = 198.0
margin_bottom = 21.0
mouse_filter = 1
size_flags_horizontal = 3
text = "ui_disable_cutscenes"

[node name="CheckBox" type="CheckBox" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/GameSettings/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_left = 206.0
margin_right = 222.0
margin_bottom = 21.0
mouse_filter = 1

[node name="AudioVideo" type="VBoxContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer"]
margin_left = 250.0
margin_right = 471.0
margin_bottom = 346.0

[node name="VideoSettings" type="MarginContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo"]
margin_right = 221.0
margin_bottom = 182.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="NinePatchRect" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings" instance=ExtResource( 2 )]
self_modulate = Color( 0.219608, 0.219608, 0.219608, 1 )
margin_top = 0.0
margin_right = 221.0
margin_bottom = 182.0

[node name="NinePatchRect2" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings" instance=ExtResource( 3 )]
self_modulate = Color( 0.2144, 0.67, 0.64722, 1 )
margin_right = 221.0

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings"]
margin_right = 221.0
margin_bottom = 182.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings/MarginContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 211.0
margin_bottom = 172.0
rect_clip_content = true

[node name="Label" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings/MarginContainer2/VBoxContainer"]
margin_right = 201.0
margin_bottom = 21.0
mouse_filter = 1
text = "ui_video"

[node name="Resolution" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings/MarginContainer2/VBoxContainer"]
margin_top = 29.0
margin_right = 201.0
margin_bottom = 50.0
mouse_filter = 1
text = "ui_resolution"

[node name="OptionButton" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings/MarginContainer2/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 58.0
margin_right = 201.0
margin_bottom = 79.0
setting = "resolution"

[node name="Brightness" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings/MarginContainer2/VBoxContainer"]
margin_top = 87.0
margin_right = 201.0
margin_bottom = 108.0
mouse_filter = 1
text = "ui_brightness"

[node name="BrightnessSlider" type="HSlider" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings/MarginContainer2/VBoxContainer"]
margin_top = 116.0
margin_right = 201.0
margin_bottom = 133.0
rect_min_size = Vector2( 201, 0 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
min_value = 55.0
max_value = 455.0
value = 255.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
setting = "brightness"

[node name="Fullscreen" type="HBoxContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings/MarginContainer2/VBoxContainer"]
margin_top = 141.0
margin_right = 201.0
margin_bottom = 162.0
size_flags_stretch_ratio = 8.32
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings/MarginContainer2/VBoxContainer/Fullscreen"]
margin_right = 165.0
margin_bottom = 21.0
mouse_filter = 1
size_flags_horizontal = 3
text = "ui_fullscreen"

[node name="CheckBox" type="CheckBox" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings/MarginContainer2/VBoxContainer/Fullscreen"]
margin_left = 185.0
margin_right = 201.0
margin_bottom = 21.0
mouse_filter = 1
script = ExtResource( 10 )
setting = "fullscreen"

[node name="AudioSettings" type="MarginContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo"]
margin_top = 190.0
margin_right = 221.0
margin_bottom = 346.0
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="NinePatchRect" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/AudioSettings" instance=ExtResource( 2 )]
self_modulate = Color( 0.219608, 0.219608, 0.219608, 1 )
margin_top = 0.0
margin_right = 221.0
margin_bottom = 156.0

[node name="NinePatchRect3" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/AudioSettings" instance=ExtResource( 3 )]
self_modulate = Color( 0.28, 1, 0.412, 1 )
margin_right = 221.0

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/AudioSettings"]
margin_right = 221.0
margin_bottom = 156.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/AudioSettings/MarginContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 211.0
margin_bottom = 146.0
rect_clip_content = true

[node name="Label" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/AudioSettings/MarginContainer2/VBoxContainer"]
margin_right = 201.0
margin_bottom = 21.0
mouse_filter = 1
text = "ui_audio"

[node name="SoundVolume" type="Label" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/AudioSettings/MarginContainer2/VBoxContainer"]
margin_top = 29.0
margin_right = 201.0
margin_bottom = 50.0
mouse_filter = 1
text = "ui_sound_volume"

[node name="SoundVolumeSlider" type="HSlider" parent="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/AudioSettings/MarginContainer2/VBoxContainer"]
margin_top = 58.0
margin_right = 201.0
margin_bottom = 75.0
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
min_value = -24.0
max_value = 24.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
setting = "sound_volume"

[node name="Default" type="Button" parent="CenterContainer/TabContainer/Настройки/VBoxContainer"]
margin_top = 379.0
margin_right = 471.0
margin_bottom = 400.0
custom_styles/hover = ExtResource( 12 )
custom_styles/focus = ExtResource( 12 )
custom_styles/normal = ExtResource( 11 )
text = "ui_default"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Управление" type="Button" parent="CenterContainer/TabContainer/Настройки/VBoxContainer"]
visible = false
margin_top = 406.0
margin_right = 471.0
margin_bottom = 427.0
custom_styles/hover = ExtResource( 12 )
custom_styles/focus = ExtResource( 12 )
custom_styles/normal = ExtResource( 11 )
text = "ui_controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Выйти2" type="Button" parent="CenterContainer/TabContainer/Настройки/VBoxContainer"]
margin_top = 406.0
margin_right = 471.0
margin_bottom = 427.0
custom_styles/hover = ExtResource( 12 )
custom_styles/focus = ExtResource( 12 )
custom_styles/normal = ExtResource( 11 )
text = "ui_back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings/MarginContainer2/VBoxContainer/OptionButton" to="CenterContainer/TabContainer/Настройки/VBoxContainer/HSplitContainer/AudioVideo/VideoSettings/MarginContainer2/VBoxContainer/OptionButton" method="_on_ResolutionsOptions_item_selected"]
[connection signal="pressed" from="CenterContainer/TabContainer/Настройки/VBoxContainer/Default" to="." method="_on_default"]
[connection signal="pressed" from="CenterContainer/TabContainer/Настройки/VBoxContainer/Управление" to="." method="_on_controls"]
[connection signal="pressed" from="CenterContainer/TabContainer/Настройки/VBoxContainer/Выйти2" to="." method="_on_exit"]
